--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,6 @@ jobs:
         run: |
           docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace archlinux:latest bash -c "
             pacman -Syu --noconfirm git sudo base-devel
-            chmod +x install.sh
-            ./install.sh
+            chmod +x setup.sh
+            ./setup.sh
           "
